refactor: 스터디 탈퇴 및 삭제